--- a/about.css
+++ b/about.css
@@ -5,13 +5,11 @@
 }
 
 html {
-  --primaryColor: #d3d3d3;
-  --lightSecondaryColor: #272a31;
-  --darkSecondaryColor: #222;
-  --accentColor: #ec5242;
-  --white: #fff;
-
   font-family: 'Lato', sans-serif;
+
+  --primaryColor: #d4d4d4;
+  --lightColor: #26292f;
+  --orangeColor: #eb5443;
 }
 
 .desktop {
@@ -26,7 +24,7 @@ p {
 }
 
 a {
-  color: var(--lightSecondaryColor);
+  color: var(--lightColor);
   text-decoration: none;
 }
 
@@ -40,22 +38,20 @@ a {
   width: 1.25rem;
 }
 
-#about-event {
-  background: url(assets/mobile_intro_bg.png);
-  background-position: center;
+#nato-session {
+  background: url(assets/mobile_intro_bg.png) no-repeat center;
   background-size: cover;
-  background-repeat: no-repeat;
   text-align: center;
 }
 
-#abt {
+#session {
   padding: 3.75rem 2rem 1rem 2rem;
   margin: 0 auto;
   max-width: 68.75rem;
 }
 
 #event-header {
-  color: var(--accentColor);
+  color: var(--orangeColor);
   margin-bottom: 1rem;
   text-align: center;
 }
@@ -65,21 +61,21 @@ a {
   font-size: 2.5rem;
 }
 
-#event-description {
-  background: var(--white);
-  padding: 1.25rem;
-  margin-bottom: 2.063rem;
+#session-description {
+  background: #fff;
+  padding: 1.3rem;
+  margin-bottom: 2rem;
 }
 
-.tint > p {
+.gallery > p {
   font-weight: 900;
   font-size: 1.25rem;
 }
 
-#event-description > p {
+#session-description > p {
   font-weight: 400;
   font-size: 1rem;
-  color: var(--lightSecondaryColor);
+  color: var(--lightColor);
   margin: 0 auto;
 }
 
@@ -108,16 +104,16 @@ a {
 }
 
 .section-title {
+  font-weight: 400;
+  font-size: 1.25rem;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-  font-weight: 400;
-  font-size: 1.25rem;
 }
 
 hr {
-  color: var(--accentColor);
-  width: 9%;
+  color: var(--orangeColor);
+  width: 8%;
   margin: 0 auto;
 }
 
@@ -137,13 +133,13 @@ hr {
   max-width: 30rem;
 }
 
-#event-cards {
+#summit-cards {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.tint {
+.gallery {
   background-color: rgb(236, 82, 66, 70%);
   color: var(--primaryColor);
   height: 12.5rem;
@@ -153,27 +149,25 @@ hr {
   place-items: center;
 }
 
-.tint > h2 {
+.gallery > h2 {
   font-weight: 900;
   font-size: 1.25rem;
 }
 
 #iceland {
-  background: url(assets/iceland.jpg);
+  background: url(assets/iceland.jpg) center;
   background-size: contain;
-  background-position: center;
 }
 
-#tanzania {
-  background-image: url(assets/tanzania.jpg);
+#finland {
+  background: url(assets/finland.jpg) center;
   background-size: contain;
-  background-position: center;
 }
 
-#event-cards > img {
+#summit-cards > img {
   width: 100%;
   height: auto;
-  max-width: 33.688rem;
+  max-width: 34rem;
 }
 
 #partners > div > h4 {
@@ -182,11 +176,11 @@ hr {
 }
 
 #partners {
-  background: var(--lightSecondaryColor);
+  background: var(--lightColor);
   padding: 1rem;
 }
 
-#mobile-partner-logos {
+#sponsor-logos {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -197,12 +191,12 @@ hr {
   padding: 1rem;
 }
 
-#mobile-partner-logos > img {
+#sponsor-logos > img {
   max-width: 5.625rem;
   filter: grayscale(100%);
 }
 
-.footer {
+footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -212,53 +206,46 @@ hr {
   padding: 2rem 2rem 1rem 0.5rem;
 }
 
-/****************** Mobile Pop-up Menu ******************/
+/* -----  Mobile Pop-up Menu ----- */
 .pop {
-  margin: 1rem 2rem 1rem 0;
   float: right;
-  background-color: transparent;
+  margin: 1rem 2rem 1rem 0;
 }
 
 #popup-mobile-menu {
-  background-color: var(--lightSecondaryColor);
-  z-index: 3;
+  background: var(--lightColor);
   height: 100vh;
+  z-index: 3;
 }
 
 #mobile-menu-list {
-  padding: 4rem 2rem;
-  margin-right: 6rem;
+  color: #ec5242;
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  color: #ec5242;
+  margin-right: 6rem;
+  padding: 4rem 2rem;
 }
 
 .nav-style {
   color: var(--primaryColor);
-  font-size: 1.5rem;
   border-bottom: 0.2rem solid #ec5242;
-  padding-bottom: 0.75rem;
+  font-size: 1.5rem;
+  padding-bottom: 0.8rem;
 }
 
 .special-nav-style {
-  font-size: 1.5rem;
-  color: var(--primaryColor);
   border: 1rem solid #ec5242;
-  background: var(--accentColor);
+  background-color: var(--orangeColor);
+  color: var(--primaryColor);
+  font-size: 1.5rem;
   width: fit-content;
-}
-
-@media screen and (max-width: 768px) {
-  #nav-link-1 {
-    display: none;
-  }
 }
 
 @media screen and (min-width: 768px) {
   .mobile {
-    visibility: hidden;
     position: absolute;
+    visibility: hidden;
     left: 0;
     top: 0;
   }
@@ -276,11 +263,11 @@ hr {
   }
 
   #top-bar {
-    background: var(--lightSecondaryColor);
-    padding: 0.5rem 6rem;
+    background-color: var(--lightColor);
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    padding: 0.4rem 5.5rem;
     gap: 2rem;
   }
 
@@ -291,31 +278,27 @@ hr {
   #nav {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    padding: 0.25rem 6rem;
+    align-items: center;
+    padding: 0.3rem 5.8rem;
   }
 
   #nav-links > ul {
-    list-style: none;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 1.25rem;
+    list-style: none;
   }
 
-  .regular-link:hover {
-    color: var(--accentColor);
+  #nav-links > ul > li > a:hover {
+    color: var(--orangeColor);
   }
 
-  /* .regular-link:visited {
-    color: var(--accentColor);
-  } */
-
-  #special-link {
-    color: var(--accentColor);
-    font-weight: 700;
+  #campaign {
     border: 0.25rem solid #ec5242;
+    color: var(--orangeColor);
+    font-weight: 700;
     padding: 0.5rem;
   }
 
@@ -324,7 +307,7 @@ hr {
     font-size: 1.125rem;
   }
 
-  #abt {
+  #session {
     max-width: 65rem;
   }
 
@@ -341,7 +324,7 @@ hr {
     margin-bottom: 1rem;
   }
 
-  #event-description {
+  #session-description {
     margin-bottom: 4rem;
   }
 
@@ -358,8 +341,8 @@ hr {
     margin-bottom: 0.5rem;
   }
 
-  .tint > h2,
-  .tint > p {
+  .gallery > h2,
+  .gallery > p {
     font-weight: 900;
     font-size: 1.5rem;
   }
@@ -380,29 +363,29 @@ hr {
     margin-bottom: 2rem;
   }
 
-  #event-cards {
+  #summit-cards {
     display: flex;
     flex-direction: row;
-    gap: 2rem;
     justify-content: center;
+    gap: 2rem;
   }
 
-  #event-cards > div,
-  .tint {
+  #summit-cards > div,
+  .gallery {
     width: 100%;
     height: 20rem;
     max-width: 35rem;
   }
 
-  .footer {
-    background: #272a31;
+  footer {
+    background-color: #272a31;
     color: var(--primaryColor);
+    font-size: 1rem;
+    font-weight: 700;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-content: end;
-    font-weight: 700;
-    font-size: 1rem;
     padding: 4rem 5rem 2rem;
   }
 
